app/src/public/css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');

* {
    font-family: 'Roboto', sans-serif;
	box-sizing: border-box;
}

body{
	align-items: center;
	justify-items: center;
	vertical-align: middle;
	margin-top: auto;
	margin-bottom: auto;
	margin-left:auto;
	margin-right:auto;
	width:30em;
	background-color: #36393f;
	color: #FFF;
}

.title {
	margin-top: 20vh; 
	color: #FFF;
}

.inp {
	position: relative;
	/*margin: auto;*/
	width: 100%;
	/*max-width: 200px;*/
	border-radius: 3px;
	overflow: hidden;
}

.inp .label {
	position: absolute;
	top: 20px;
	left: 12px;
	font-size: 16px;
	color: rgba(255, 255, 255, 0.75);
	font-weight: 500;
	transform-origin: 0 0;
	transform: translate3d(0, 0, 0);
	transition: all 0.2s ease;
	pointer-events: none;
}

.inp .focus-bg {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	background: rgba(0, 0, 0, .05);
	z-index: -1;
	transform: scaleX(0);
	transform-origin: left;
}

.inp input {
	-webkit-appearance: none;
	appearance: none;
	width: 100%;
    border: 0;
	font-family: inherit;
	padding: 16px 12px 0 12px;
	height: 56px;
	font-size: 16px;
	font-weight: 400;
	background: rgb(58 61 67);
	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .3);
	color: #FFF;
	transition: all 0.15s ease;
}

.inp input:hover {
	background: rgba(0, 0, 0, .04);
	box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .5);
}

.inp input:not(:placeholder-shown) + .label {
	color: rgba(0, 0, 0, .5);
	transform: translate3d(0, -12px, 0) scale(0.75);
}

.inp input:focus {
	background: rgba(0, 0, 0, .05);
	outline: none;
	box-shadow: inset 0 -2px 0 #FFF;
}

.inp input:focus + .label {
	color: rgba(255, 255, 255, 0.75);
	transform: translate3d(0, -12px, 0) scale(0.75);
}

.inp input:focus + .label + .focus-bg {
    transform: scaleX(1);
	transition: all 0.1s ease;
}

.parentgrid1 {
	display: grid;
	grid-template-columns: auto;
}

.parentgrid2 {
    display: grid;
	grid-template-columns: 1fr 1fr;
}

.parentgrid2.middlepage {
	align-items: center;
	justify-items: center;
}

.column {
    display: grid;
}

button {
    padding: 5px;
}

.mainpagebutton {
	width: 120px;
}

#logindiv {
	position: fixed;
	right: 10px;
	top: 10px;
}

.loginbuttons {
	font-size: 15px;
	margin-top: 10px;
	padding: 0.35em 1.2em;
	border: 0.1em solid #FFF;
	border-radius: 0.12em;
	box-sizing: border-box;
	text-decoration: none;
	font-weight: 300;
	color: #FFF;
	text-align: center;
	transition: all 0.2s;
	background: rgba(0,0,0,0);
	cursor: pointer;
}

.loginbuttons:hover {
	color: #000;
	background: #FFF;
}

.loginbuttons#recordbutton {
	padding: 4em 1.2em;
	background: url(recordwhite.png);
	background-size: 100px auto;
	background-repeat-x: no-repeat;
	background-repeat-y: no-repeat;
	background-position-x: center;
	background-position-y: center;
}

.loginbuttons#recordbutton:hover {
	padding: 4em 1.2em;
	background: url(recordgray.png);
	background-color: #FFF;
	background-size: 100px auto;
	background-repeat-x: no-repeat;
	background-repeat-y: no-repeat;
	background-position-x: center;
	background-position-y: center;
}

.loginbuttons.logout {
	font-size: 13px;
	padding: 0.35em 0.5em;
}

.column.reg {
	margin: 5px;
}

.loginbuttons.reg {
	width: 100%;
}

.reginput {
	margin-bottom: 5px;
}

#signeddiv {
	position: fixed;
	top: 10px;
	right: 10px;
}

